Stops tweets overflowing into one line under avatar

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -1009,6 +1009,16 @@ input.input[type=search],
     border-bottom: 1px solid @color-swatch7;
     padding: 0 0 30px 0;
     margin: 0 0 30px 0;
+
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	
+    @media @mobile {
+        display: inherit;
+    }
+
     &:last-child {
         border-bottom:0;
         padding: 0 0 7px 0;
